src/widgets/widgets/qplaintextedit_p.h
@@ -121,7 +121,7 @@ public:
 
     void init(const QString &txt = QString());
     void _q_repaintContents(const QRectF &contentsRect);
-    void _q_textChanged();
+    void _q_updatePlaceholderVisibility();
 
     inline QPoint mapToContents(const QPoint &point) const
         { return QPoint(point.x() + horizontalOffset(), point.y() + verticalOffset()); }
